# tactical-asset-allocation

./: LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
notebooks/: Main.ipynb  test.ipynb  tests.ipynb
src/pytaa/: __init__.py
src/pytaa/backtest/: __init__.py  performance.py  positions.py  returns.py
src/pytaa/strategy/: __init__.py  signals.py  static.py  strategies.py
src/pytaa/tools/: __init__.py  data.py  logger.py  risk.py  utils.py
src/taa/: data.py  performance.py  positions.py  signals.py  strategies.py  utils.py
src/taa/backtest/: __init__.py  performance.py  positions.py  returns.py
src/taa/strategy/: README.md  __init__.py  signals.py  static.py  strategies.py
src/taa/tools/: data.py  logger.py  utils.py
taa/: data.py  strategies.py
tests/backtest/: test_performance.py  test_positions.py
tests/fixtures/backtest/: test_performance.py  test_positions.py
tests/fixtures/strategy/: test_signals.py  test_strategies.py
tests/fixtures/tools/: test_data.py  test_risk.py
tests/strategy/: test_signals.py  test_strategies.py
tests/tools/: test_data.py  test_risk.py  test_utils.py
