[build-system]
requires = [
    "setuptools >= 49",
    "wheel >= 0.35",
    "setuptools_scm[toml] >= 3.4"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.pylint."MASTER"]
ignore-patterns = "__init__.py"

[tool.pylint."MESSAGES CONTROL"]
disable = ""

[tool.pylint."REPORTS"]
output-format = "colorized"
msg-template = "{msg_id} {{symbol}}: {path}:{line}, {column}: {obj}: {msg}"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "0.5.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "VERSION"
