[metadata]
name = pytaa
author = oronimbus
long_description = A package for tactical asset allocation and backtesting.
version = 0.4.0

[options]
package_dir=
    =src
packages=find:
install_requires = 
    numpy >1, <=1.24
    pandas >1, <2
    numba <1
    scipy >1, <2
    yfinance >0.1

[options.packages.find]
where=src
