[metadata]
name = pytaa
author = oronimbus
long_description = A package for tactical asset allocation and backtesting.
version = 0.5.0

[options]
package_dir=
    =src
packages=find:
install_requires = 
    numpy >2.0.1, <3
    pandas >2.0.1, <3
    numba >= 0.57.0, <1
    scipy >1.10.1, <2
    yfinance >0.1.0, <1

[options.packages.find]
where=src

[coverage:report]
show_missing = true
fail_under = 50
exclude_lines = 
    pragma: no cover

[coverage:run]
omit = 
    **/__init__.py
source = 
    src/

[flake8]
max-line-length = 100
ignore = 
    D105
exclude = 
    tests/*
    __pycache__
